Add plotly to requirements.txt
Added plotly to the list of Python dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,5 @@ numpy>=1.26.0               # Numerical computations
 
 # ── Visualization ──────────────────────────────────────────────────────────
 matplotlib>=3.8.0           # Bar chart generation
+
+plotly
